# CTRvision

./: .env.example  .gitignore  README.md  build.sh  experiments_guide.md  install.sh  notebook.sh  pyproject.toml  run.sh  test_scripts.sh  validate_improvements.py
docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
src/: __init__.py  config.yaml
src/model/: classification_head.py  focal_loss.py
src/notebook/: ctr-vision.sh
src/notebooks/: ctr-vision.ipynb  ctr-vision.sh
src/scripts/: dataset.py  download.py  main.py  plot.py  train.py
src/utils/: config_parser.py  custom_logging.py
